--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 80;
     server_name _;
@@ -5,6 +10,19 @@ server {
     # Serve built frontend
     root /usr/share/nginx/html;
     index index.html;
+
+    # Proxy API requests to backend running on the host machine
+    # Adjust the target if your backend listens on a different host/port
+    location /api/ {
+        proxy_pass http://host.docker.internal:8080/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
 
     # Cache static assets aggressively (immutable filenames from Vite)
     location ~* \.(?:css|js|mjs|woff2?|ttf|eot|otf|png|jpe?g|gif|svg|ico)$ {
