--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   frontend:
     build:
@@ -9,8 +7,9 @@ services:
         # Set the backend API base URL that the frontend will use at build time
         # Example: http://backend.yourdomain.com/api or http://backend:8080/api
         VITE_API_BASE: ${VITE_API_BASE:-/api}
-    image: frooooooont:latest
-    container_name: frooooooont
+    image: spay-frontend:latest
+    container_name: spay-frontend
     ports:
-      - "${PORT:-8080}:80"
+      # Default host port changed to 8081 to avoid conflicts; override with PORT env or remove this block if using an external proxy
+      - "${PORT:-80}:80"
     restart: unless-stopped
