--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,5 @@ services:
       # Default host port changed to 8081 to avoid conflicts; override with PORT env or remove this block if using an external proxy
       - "${PORT:-80}:80"
     restart: unless-stopped
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
