--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.4.1",
+    "chart.js": "^4.4.7",
     "ky": "^1.12.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.0"
